[project]
name = "highrise"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce",
    "pyyaml",
]

[dependency-groups]
# Tooling for producing distributable builds (see highrise.spec / CI).
build = [
    "pyinstaller>=6.0",
]

[tool.uv.sources]
pygame-core = { path = "src/pygame_core", editable = true }
